Bug 284890 - Offers Save dialog in current directory irrespective of where file is from
Summary: Offers Save dialog in current directory irrespective of where file is from
Status: RESOLVED FIXED
Alias: None
Product: kolourpaint
Classification: Applications
Component: general (other bugs)
Version First Reported In: Comes with KDE
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kolourpaint-support
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-24 18:47 UTC by Goran Brannstrom
Modified: 2011-10-26 14:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Goran Brannstrom 2011-10-24 18:47:26 UTC
Version:           Comes with KDE (using KDE 4.7.2) 
OS:                Linux

Just make the application conform with any other KDE program that handles files.  Its as simple as that.

Reproducible: Always

Steps to Reproduce:
Edit any jpeg file by clicking in Dolphin, edit and try to save. 

Actual Results:  
Kolourpaint will open save dialog in last saved directory instead of directory where the file came from. This is confusing, often destructive, if you have a file by the same name in many directories, not to say really tiresome. 

Expected Results:  
If you press "Save" save file where it came from (same directory, same name).
If you press "Save as..." show Save-dialog in file's directory of origin.

I'm so tired with this application bu this stage, having time and again destroyed precious pictures by overwriting a file in another directory or not finding where a file I saved ended up. I'm leaving this bug report as a final goodbye in the hope that it will be be fixed for others or marked as "Beta" as a warning.
Comment 1 Martin Koller 2011-10-26 14:02:44 UTC
Git commit 25bfb7208fafad76ed953260ccb88123dd9e18a8 by Martin Koller.
Committed on 26/10/2011 at 15:49.
Pushed by mkoller into branch 'KDE/4.7'.

use directory of loaded file in saveAs dialog again

(Sorry for having messed this up in 4.7.0)

BUG: 284890
BUG: 284410
BUG: 277168

M  +2    -2    mainWindow/kpMainWindow_File.cpp

http://commits.kde.org/kolourpaint/25bfb7208fafad76ed953260ccb88123dd9e18a8
Comment 2 Martin Koller 2011-10-26 14:02:44 UTC
Git commit 8991692a54ab1d1b0111a61d7fb39cdb1ac9cdb1 by Martin Koller.
Committed on 26/10/2011 at 15:49.
Pushed by mkoller into branch 'master'.

use directory of loaded file in saveAs dialog again

(Sorry for having messed this up in 4.7.0)

BUG: 284890
BUG: 284410
BUG: 277168

M  +2    -2    mainWindow/kpMainWindow_File.cpp

http://commits.kde.org/kolourpaint/8991692a54ab1d1b0111a61d7fb39cdb1ac9cdb1