use directory of loaded file in saveAs dialog again

(Sorry for having messed this up in 4.7.0)

BUG: 284890
BUG: 284410
BUG: 277168